# 2019

./: .gitignore  LICENSE.txt  README.md  index.html  setup.cfg  setup.py
css/: .ekko-lightbox.min.css.swp  main.css
docs/: installation.md  problem_definition.md
src/baseline_algorithm/: functions.py  rec_popular.py
src/score_submission/: functions.py  score_subm.py
src/verify_submission/: functions.py  verify_subm.py
